--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -5,6 +5,6 @@
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(auto-fill, 1fr);
     width: 1184px;
-    margin: 92px auto;
+    margin: 92px auto 0 auto;
     grid-gap: 16px;
 }
