--- a/pages/index.css
+++ b/pages/index.css
@@ -5,3 +5,6 @@
 @import url(../fonts/fonts.css);
 @import url(../blocks/intro/intro.css);
 @import url(../blocks/photo-grid/photo-grid.css);
+@import url(../blocks/places/places.css);
+@import url(../blocks/place/place.css);
+@import url(../blocks/cover/cover.css);
