--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,5 +1,5 @@
 .cover__subtitle{
-    width: 360px;
+    max-width: 360px;
     font-family: Inter;
     font-style: normal;
     font-weight: normal;
@@ -7,7 +7,5 @@
     line-height: 22px;
     text-align: center;
     color: #FFFFFF;
-    text-align: center;
-    margin: 0 auto;
-    
+    margin-top: 32px;
 }
