--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,12 +1,12 @@
 .cover__title{
-    width: 560px;
+    max-width: 560px;
+    width: 100%;
+    margin: 0;
     font-family: Inter;
     font-style: normal;
     font-weight: 900;
     font-size: 72px;
     line-height: 76px;
-    color: #FFFFFF;
-    margin: 0 auto;
     text-align: center;
-    
+    color: #FFF;
 }
