--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,11 +1,15 @@
 @import url(./__subtitle/cover__subtitle.css);
 @import url(./__title/cover__title.css);
 @import url(./__overlay/cover__overlay.css);
+@import url(./__link/cover__link.css);
 
 /* Блок cover */
 .cover{
-    margin: 92px 0 0 0;
     display: flex;
-    align-items: center;
-
+    max-width: 1184px;
+    min-height: 740px;
+    margin: 92px auto 0 auto;
+    background: url(../../../images/background-cover.png);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
