--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -7,4 +7,9 @@
     line-height: 22px;
     text-decoration-line: underline;
     color: #FFFFFF;
+    
+}
+
+.place__link:hover{
+    opacity: 0.8;
 }
