--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -4,7 +4,7 @@
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(auto-fill, 1fr);
-    width: 1184px;
+    max-width: 1184px;
     margin: 92px auto 0 auto;
     grid-gap: 16px;
 }
