--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -12,3 +12,42 @@
     align-items: center;
     justify-content: space-between;
 }
+
+@media screen and (max-width: 1024px){
+    .header{
+        max-width: 928px;
+    }
+}
+
+@media screen and (max-width: 768px){
+    .header{
+        max-width: 720px;
+    }
+}
+
+
+@media screen and (max-width: 475px){
+    .header{
+        max-width: 90%;
+        margin-right: auto;
+        margin-left: auto;
+    }
+}
+
+@media screen and (max-width: 380px){
+    .header{
+        max-width: 90%;
+        margin-right: auto;
+        margin-left: auto;
+    }
+}
+
+@media screen and (max-width: 320px){
+    .header{
+        max-width: 288px;
+        display: flex;
+        justify-content: space-between;
+        margin: 0 auto 0 auto;
+    }
+}
+
