--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -4,12 +4,41 @@
 @import url(./__link/cover__link.css);
 
 /* Блок cover */
-.cover{
-    display: flex;
+
+.cover {
     max-width: 1184px;
     min-height: 740px;
     margin: 92px auto 0 auto;
-    background: url(../../../images/background-cover.png);
-    background-repeat: no-repeat;
+    background-image: url(../../images/background-cover.png);
+    background-position: center;
     background-size: cover;
+    background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
+
+@media screen and (max-width: 1024px){
+    .cover {
+        min-width: 100%;
+        min-height: 640px;
+    }
+}
+
+@media screen and (max-width: 768px){
+    .cover {
+        min-width: 100%;
+        min-height: 480px;
+    }
+}
+
+
+
+@media screen and (max-width: 320px) {
+    .cover {
+        min-width: 100%;
+        min-height: 200px;
+    }
+}
+
