--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,5 +1,5 @@
 .footer__copyright{
-    width: 200px;
+    max-width: 200px;
     margin: 0;
     text-align: right;
     font-family: Inter;
@@ -9,4 +9,47 @@
     color: #FFF;
     line-height: 16px
     
+}
+
+@media screen and (max-width: 400px) and (min-width: 321px) {
+    .footer__copyright{
+        margin-top: 48px;
+        max-width: 186px;
+        text-align: left;
+        margin-left: 16px;
+        font-family: Inter;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 14px;
+        line-height: 14px;
+
+    }
+}
+
+@media screen and (max-width: 576px) and (min-width: 401px) {
+    .footer__copyright{
+        margin-top: 48px;
+        max-width: 186px;
+        text-align: left;
+        margin-left: 16px;
+        font-family: Inter;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 16px;
+        line-height: 24px;
+    }
+}
+
+@media screen and (max-width: 320px){
+    .footer__copyright{
+        margin-top: 48px;
+        max-width: 186px;
+        text-align: left;
+        margin-left: 16px;
+        font-family: Inter;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 14px;
+        line-height: 14px;
+    }
 }
