--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -6,7 +6,59 @@
     padding: 92px 0 24px 0;
     max-width: 1184px;
     display: flex;
-    align-items: center;
     justify-content: space-between;
-    margin: 0 auto;
+    margin: 0 auto 0 auto;
+
 }
+
+@media screen and (max-width: 1024px){
+    .footer{
+        max-width: 928px;
+        margin: 0 auto 0 auto;
+    }
+}
+
+@media screen and (max-width: 940px) and (min-width: 401px){
+    .footer{
+        max-width: 90%;
+        margin: 0 auto 0 auto;
+    }
+}
+
+@media screen and (max-width: 768px){
+    .footer{
+        max-width: 720px;
+        margin: 0 auto 0 auto;
+    }
+}
+
+@media screen and (max-width: 400px) and (min-width: 321px) {
+    .footer {
+       max-width: 100%;
+        margin: 0;
+    }
+}
+
+@media screen and (max-width: 400px) and (min-width: 321px) {
+    .footer{
+        padding: 60px 0 24px 0;
+        flex-direction: column;
+    }
+}
+
+@media screen and (max-width: 576px) and (min-width: 401px) {
+    .footer{
+        padding: 60px 0 24px 0;
+        flex-direction: column;
+    }
+}
+
+@media screen and (max-width: 320px){
+    .footer{
+        max-width: 186px;
+        display: flex;
+        flex-direction: column;
+        margin-left: 16px;
+    }
+}
+
