--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -9,3 +9,22 @@
     padding: 0;
     margin: 40px 0 0 0;
 }
+
+
+@media screen and (max-width: 692px){
+    .intro__text{
+        max-width: 530px;
+    }
+}
+
+@media screen and (max-width: 579px) and (min-width: 321px){
+    .intro__text{
+        max-width: 100%;
+    }
+}
+
+@media screen and (max-width: 320px){
+    .intro__text{
+        max-width: 288px;
+    }
+}
