--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,5 +1,5 @@
 .intro__title{
-    width: 690px;
+    max-width: 690px;
     font-family: Inter;
     font-style: normal;
     font-weight: 900;
@@ -7,4 +7,30 @@
     line-height: 58px;
     color: #fff;
     margin: 0;
+}
+
+@media screen and (max-width: 692px){
+    .intro__title{
+        max-width: 100%;
+    }
+}
+
+@media screen and (max-width: 768px){
+    .intro__title{
+        max-width: 720px;
+        font-family: Inter;
+        font-style: normal;
+        font-weight: 900;
+        font-size: 32px;
+        line-height: 35px;
+    }
+}
+
+@media screen and (max-width: 579px) and (min-width: 321px){
+    .intro__title{
+        max-width: 100%;
+        margin-right: auto;
+        margin-left: auto;
+        text-align: center;
+    }
 }
