--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,8 +1,41 @@
 @import url(./__list/intro__list.css);
 @import url(./__text/intro__text.css);
 @import url(./__title/intro__title.css);
+@import url(./__list-item/intro__list-item.css);
 
-.intro{
-    width: 690px;
-    margin: 92px 0 0 148px;
+.intro {
+    max-width: 984px;
+    margin: 92px auto 0 auto;
 }
+
+
+@media screen and (max-width: 1024px){
+    .intro{
+        max-width: 928px;
+    }
+}
+
+@media screen and (max-width: 692px){
+    .intro{
+        max-width: 640px;
+    }
+}
+
+@media screen and (max-width: 768px){
+    .intro{
+        max-width: 720px;
+    }
+}
+
+@media screen and (max-width: 579px) and (min-width: 321px){
+    .intro{
+        max-width: 100%;
+    }
+}
+
+@media screen and (max-width: 320px){
+    .intro{
+        max-width: 288px;
+    }
+}
+
