--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -8,3 +8,36 @@
     color: #FFFFFF;
     margin: 8px 0 0 0;
 }
+
+@media screen and (max-width: 768px){
+    .lead__caption{
+        font-family: Inter;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 10px;
+        line-height: 14px;
+        letter-spacing: 0.15em;
+        text-transform: uppercase;
+        margin-left: 24px;
+    }
+}
+
+@media screen and (max-width: 720px) and (min-width: 321px){
+    .lead__caption{
+        margin-left: 18px;
+    }
+}
+
+@media screen and (max-width: 320px){
+    .lead__caption{
+        max-width: 159px;
+        margin-left: 16px;
+        font-family: Inter;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 10px;
+        line-height: 14px;
+        letter-spacing: 0.15em;
+        text-transform: uppercase;
+    }
+}
