--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,6 +1,11 @@
 .lead__image {
     max-width: 100%;
     height: auto;
-    object-fit: cover;
     margin: 64px 0 0 0;
+}
+
+@media screen and (max-width: 1023px) and (min-width: 768px){
+    .lead__image {
+        width: 100%;
+    }
 }
