--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,10 +1,35 @@
 .lead__title{
     text-align: center;
-    width: 720px;
+    max-width: 720px;
     font-style: normal;
     font-weight: 900;
     font-size: 96px;
     line-height: 100px;
     margin: 56px auto 0 auto;
     color: #FFFFFF;
+}
+
+@media screen and (max-width: 700px){
+    .lead__title{
+        font-size: 50px;
+        line-height: 45px;
+    }
+}
+
+@media screen and (max-width: 579px) and (min-width: 321px){
+    .lead__title{
+        font-size: 40px;
+    }
+}
+
+@media screen and (max-width: 320px){
+    .lead__title{
+        max-width: 288px;
+        font-family: Inter;
+        font-style: normal;
+        font-weight: 900;
+        font-size: 40px;
+        line-height: 44px;
+        text-align: center;
+    }
 }
