--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -5,7 +5,25 @@
 
 
 .lead{
-    margin: 0 auto;
-    width: 984px;
+    margin: 0 auto 0 auto;
+    max-width: 984px;
     position: relative;
+}
+
+@media screen and (max-width: 1024px){
+    .lead{
+        max-width: 928px;
+    }
+}
+
+@media screen and (max-width: 768px){
+    .lead{
+        max-width: 768px;
+    }
+}
+
+@media screen and (max-width: 320px){
+    .lead{
+        max-width: 320px;
+    }
 }
