--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -1,5 +1,78 @@
-.photo-grid__item{
-    max-width: 284px; 
-    height: auto;
-    object-fit: cover;
+.photo-grid__item {
+    max-width: 284px;
+    height: 213px;
+    margin: 16px 0 0 0;
+    justify-content: space-around;
+    align-content: space-around;
 }
+@media screen and (max-width: 1024px) and (max-width: 1279px) {
+    .photo-grid__item {
+        max-width: 300px;
+        height: 225px;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .photo-grid__item {
+        width: 285px;
+        height: 285px;
+        justify-content: center;
+    }
+}
+
+@media screen and (max-width: 580px){
+    .photo-grid__item {
+        width: 290px;
+        height: 290px;
+        justify-content: center;
+    }
+}
+
+
+
+@media screen and (max-width: 1023px) and (min-width: 767px) {
+    .photo-grid__item {
+        max-width: 352px;
+        height: 264px;
+        justify-content: center;
+    }
+}
+
+@media screen and (max-width: 768px){
+    .photo-grid__item{
+        max-width: 352px;
+        justify-content: center;
+    }
+}
+
+@media screen and (max-width: 581px) {
+    .photo-grid__item {
+        max-width: 230px;
+        max-height: 230px;
+        margin: 0;
+        justify-content: space-around;
+    }
+
+
+}
+
+@media screen and (max-width: 567px) and (min-width: 321px){
+    .photo-grid__item{
+        margin-right: auto;
+        margin-left: auto;
+        max-width: 100%;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .photo-grid__item {
+        margin: 12px auto 0 auto;
+        max-width: 288px;
+    }
+
+    .photo-grid__item:first-child{
+        margin-top: 0;
+
+    }
+}
+
