--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -8,7 +8,13 @@
     margin: 0 0 24px 0;
 }
 
+@media screen and (max-width: 579px) and (min-width: 321px){
+    .place__paragraph{
+        max-width: 100%;
+    }
+}
 
 .place__paragraph:last-child{
     margin-bottom: 0;
 }
+
