--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -6,6 +6,59 @@
     font-size: 72px;
     line-height: 76px;
     color: #FFFFFF;
-    margin: 0;
     align-self: flex-end;
+    margin: 0 0 0 0;
+    
+}
+
+@media screen and (max-width: 1024px){
+    .place__title{
+        max-width: 440px;
+    }
+}
+
+@media screen and (max-width: 1023px) and (min-width: 769px) {
+    .place__title {
+        font-size: 38px;
+        line-height: 35px;
+        max-width: 340px;
+    }
+
+}
+
+@media screen and (max-width: 768px){
+    .place__title{
+        font-family: Inter;
+        font-style: normal;
+        font-weight: 900;
+        font-size: 42px;
+        line-height: 46px;
+        max-width: 340px;
+    }
+}
+
+@media screen and (max-width: 767px) and (min-width: 580px){
+    .place__title{
+        max-width: 300px;
+    }
+}
+
+@media screen and (max-width: 579px) and (min-width: 321px){
+    .place__title{
+        width: 100%;
+        margin-right: auto;
+        margin-left: auto;
+        text-align: center;
+    }
+
+    .place:first-child{
+        margin-top: 0;
+    }
+}
+
+@media screen and (max-width: 320px){
+    .place__title{
+        max-width: 288px;
+        margin: 0 auto;
+    }
 }
