--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -1,5 +1,5 @@
 .place__url-heading{
-    width: 456px;
+    max-width: 456px;
     margin: 0 0 12px 0;
     font-family: Inter;
     font-style: normal;
