--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -1,4 +1,30 @@
 .place__website{
-    width: 456px;
+    max-width: 456px;
     align-self: flex-end;
+}
+
+@media screen and (max-width: 1023px) and (min-width: 768px){
+    .place__website {
+        max-width: 348px;
+    }
+}
+
+
+
+@media screen and (max-width: 767px) and (min-width: 580px){
+    .place__website{
+        max-width: 200px;
+    }
+}
+
+@media screen and (max-width: 579px) and (min-width: 321px){
+    .place__website{
+       display: none;
+    }
+}
+
+@media screen and (max-width: 320px){
+    .place__website {
+        display: none;
+    }
 }
