--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -6,16 +6,67 @@
 @import url(./__website/place__website.css);
 @import url(./__paragraph-item/place__paragraph-item.css);
 
-.place{
-    width: 984px;
-    display: grid;
-    grid-template-columns: 460px 484px;
-    grid-template-rows: max-content max-content; 
+.place {
+    max-width: 984px;
+    margin: 0 auto 80px auto;
+    display: flex;
+    flex-wrap: wrap;
     grid-column-gap: 40px;
     grid-row-gap: 48px;
-    margin: 0 0 80px 0;
 }
 
 .place:last-child{
-    margin: 0;
+    margin-bottom: 0;  
 }
+
+@media screen and (max-width: 1024px) {
+    .place {
+        max-width: 928px;
+        grid-column-gap: 32px;
+        grid-row-gap: 48px;
+    }
+}
+
+
+@media screen and (max-width: 1023px) and (min-width: 769px) {
+    .place {
+        max-width: 700px;
+        margin: 0px auto 60px auto;
+        grid-column-gap: 20px;
+        grid-row-gap: 40px;
+    }
+}
+
+@media screen and (max-width: 768px){
+    .place{
+        max-width: 100%;
+        grid-column-gap: 28px;
+        grid-row-gap: 48px;
+        margin-bottom: 72px;
+    }
+}
+
+@media screen and (max-width: 767px) and (min-width: 580px){
+    .place{
+        max-width: 570px;
+    }
+}
+
+@media screen and (max-width: 579px) and (min-width: 321px){
+    .place{
+        width: 90%;
+        flex-direction: column;
+        margin: 60px auto 0 auto;
+    }
+
+    .place:first-child{
+        margin-top: 0;
+    }
+}
+
+@media screen and (max-width: 320px){
+    .place{
+        max-width: 320px;
+    }
+}
+
