--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,4 +1,16 @@
 .places{
     margin: 92px auto 0 auto;
-    width: 984px;
+    max-width: 984px;
+}
+
+@media screen and (max-width: 768px){
+    .places{
+        max-width: 720px;
+    }
+}
+
+@media screen and (max-width: 579px) and (min-width: 321px){
+    .photo-grid{
+        width: 100%;
+    }
 }
