--- a/blocks/intro/__list-item/intro__list-item.css
+++ b/blocks/intro/__list-item/intro__list-item.css
@@ -7,3 +7,10 @@
     line-height: 18px;
     color: #fff;
 }
+
+@media screen and (max-width: 319px){
+    .intro__list-item{
+        width: 100%;
+        font-size: 10px;
+    }
+}
