--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -1,5 +1,5 @@
 .intro__list{
-    width: 690px;
+    max-width: 690px;
     margin: 32px 0 0 0;
     padding: 0;
 }
@@ -19,5 +19,11 @@
 @media screen and (max-width: 320px){
     .intro__list{
         max-width: 288px;
+    }
+}
+
+@media screen and (max-width: 319px){
+    .intro__list-item{
+        width: 100%;
     }
 }
