--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -33,3 +33,10 @@
         text-align: center;
     }
 }
+
+@media screen and (max-width: 319px){
+    .lead__title{
+        max-width: 100%;
+        font-size:24px;
+    }
+}
