--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -76,3 +76,11 @@
     }
 }
 
+@media screen and (max-width: 319px){
+    .photo-grid__item{
+        width: 100%;
+        margin: 0 auto 0 auto;
+        object-fit: cover;
+        object-position: center;
+    }
+}
