--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -69,6 +69,13 @@
     }
 }
 
+@media screen and (max-width: 319px){
+    .photo-grid{
+        max-width: 100%;
+        margin: 0 auto 0 auto;
+    }
+}
+
 
 
 
