--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,5 +1,5 @@
 .page{
     background: #2A2C2F;
-    font-family: Inter;
-    margin: 0 auto;
+    font-family: Inter, sans-serif;
+    margin: 0 auto 0 auto;
 }
