--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -32,7 +32,7 @@
         max-width: 186px;
         text-align: left;
         margin-left: 16px;
-        font-family: Inter;
+        font-family: Inter, sans-serif;
         font-style: normal;
         font-weight: normal;
         font-size: 16px;
