--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,6 +1,7 @@
 .header__lang-link{
     font-size: 24px;
     line-height: 28px;
+    font-family: Inter, sans-serif;
     font-style: normal;
     font-weight: normal;
     text-decoration: none;
