--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -11,7 +11,7 @@
 
 @media screen and (max-width: 768px){
     .lead__caption{
-        font-family: Inter;
+        font-family: Inter, sans-serif;
         font-style: normal;
         font-weight: normal;
         font-size: 10px;
