--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,4 +1,5 @@
 .lead__subtitle{
+    font-family: Inter, sans-serif;
     max-width: 640px;
     font-style: normal;
     font-weight: normal;
@@ -12,7 +13,6 @@
 @media screen and (max-width: 320px) {
     .lead__subtitle{
         max-width: 288px;
-        font-family: Inter;
         font-style: normal;
         font-weight: normal;
         font-size: 16px;
