--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -19,13 +19,13 @@
 @media screen and (max-width: 579px) and (min-width: 321px){
     .lead__title{
         font-size: 40px;
+        font-family: Inter, sans-serif;
     }
 }
 
 @media screen and (max-width: 320px){
     .lead__title{
         max-width: 288px;
-        font-family: Inter;
         font-style: normal;
         font-weight: 900;
         font-size: 40px;
