--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,6 +1,6 @@
 .place__title{
     width: 460px;
-    font-family: Inter;
+    font-family: Inter, sans-serif;
     font-style: normal;
     font-weight: 900;
     font-size: 72px;
@@ -28,7 +28,7 @@
 
 @media screen and (max-width: 768px){
     .place__title{
-        font-family: Inter;
+        font-family: Inter, sans-serif;
         font-style: normal;
         font-weight: 900;
         font-size: 42px;
