--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -16,6 +16,7 @@
 
 @media screen and (max-width: 320px){
     .header__logo{
-        max-width: 142px;
+        width: 142px;
+        min-height: 42px;
     }
 }
