--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,10 +1,10 @@
 @import url(./__lang-link/header__lang-link.css);
 @import url(./__logo/header__logo.css);
 @import url(./__lang-links/header__lang-links.css);
+@import url(./__lang-link/_state/header__lang-link_focus.css);
 
 .header{
     padding-top: 28px;
-    min-height: 52px;
     max-width: 1184px;
     display: flex;
     position: relative;
