--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -2,6 +2,7 @@
 @import url(./__text/intro__text.css);
 @import url(./__title/intro__title.css);
 @import url(./__list-item/intro__list-item.css);
+@import url(./__list-span/intro__list-span.css);
 
 .intro {
     max-width: 984px;
