--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -2,4 +2,7 @@
     background: #2A2C2F;
     font-family: Inter, sans-serif;
     margin: 0 auto 0 auto;
+    min-width: 320px;
+    max-width: 1280px;
 }
+
