--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -5,6 +5,7 @@
     justify-content: space-around;
     align-content: space-around;
 }
+
 @media screen and (max-width: 1024px) and (max-width: 1279px) {
     .photo-grid__item {
         max-width: 300px;
@@ -68,6 +69,7 @@
     .photo-grid__item {
         margin: 12px auto 0 auto;
         max-width: 288px;
+        max-height: 216px;
     }
 
     .photo-grid__item:first-child{
