--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -11,7 +11,7 @@
     margin: 0 auto 80px auto;
     display: flex;
     flex-wrap: wrap;
-    grid-column-gap: 40px;
+    column-gap: 40px;
     grid-row-gap: 48px;
 }
 
@@ -22,7 +22,7 @@
 @media screen and (max-width: 1024px) {
     .place {
         max-width: 928px;
-        grid-column-gap: 32px;
+        column-gap: 32px;
         grid-row-gap: 48px;
     }
 }
@@ -32,7 +32,7 @@
     .place {
         max-width: 700px;
         margin: 0px auto 60px auto;
-        grid-column-gap: 20px;
+        column-gap: 20px;
         grid-row-gap: 40px;
     }
 }
@@ -40,7 +40,7 @@
 @media screen and (max-width: 768px){
     .place{
         max-width: 100%;
-        grid-column-gap: 28px;
+        column-gap: 28px;
         grid-row-gap: 48px;
         margin-bottom: 72px;
     }
