--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -6,8 +6,8 @@
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
-    color: #FFF;
-    line-height: 16px
+    line-height: 14px;
+    color: #fff;
     
 }
 
