--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -60,5 +60,10 @@
     .place__title{
         max-width: 288px;
         margin: 0 auto;
+        font-family: Inter;
+        font-style: normal;
+        font-weight: 900;
+        font-size: 32px;
+        line-height: 35px;
     }
 }
