--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,4 +1,46 @@
-.cover__link{
+.cover__link {
+    width: 100%;
+    min-height: 740px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0,0,0, 0.3);
     text-decoration: none;
     width: 100%;
 }
+
+.cover__link:hover{
+    background: rgba(0,0,0, 0.8);
+    cursor: pointer;
+    transition: 0.5s;
+
+}
+
+
+@media screen and (max-width: 1024px){
+    .cover__link {
+        width: 100%;
+        min-height: 640px;
+    }
+}
+
+@media screen and (max-width: 768px){
+    .cover__link {
+        width: 100%;
+        min-height: 480px;
+    }
+}
+
+
+
+@media screen and (max-width: 320px) {
+    .cover__link {
+        width: 100%;
+        min-height: 200px;
+    }
+}
+
+
+
+
