--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -5,6 +5,11 @@
     color: #fff;
 }
 
+.footer__link:hover{
+  opacity: 0.7;
+  cursor: pointer;
+}
+
 .footer__link:last-child{
     margin-right: 0;
 }
@@ -49,6 +54,11 @@
         margin-right: 0;
         justify-self: flex-start;
         margin-bottom: 32px;
+        font-family: Inter;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 24px;
+        line-height: 24px;
     }
 
     .footer__link:last-child{
