--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -11,8 +11,7 @@
     margin: 0 auto 80px auto;
     display: flex;
     flex-wrap: wrap;
-    column-gap: 40px;
-    grid-row-gap: 48px;
+    gap:48px 40px;
 }
 
 .place:last-child{
@@ -22,8 +21,7 @@
 @media screen and (max-width: 1024px) {
     .place {
         max-width: 928px;
-        column-gap: 32px;
-        grid-row-gap: 48px;
+        gap: 48px 32px;
     }
 }
 
@@ -32,16 +30,15 @@
     .place {
         max-width: 700px;
         margin: 0px auto 60px auto;
-        column-gap: 20px;
-        grid-row-gap: 40px;
+        gap: 40px 20px;
+      
     }
 }
 
 @media screen and (max-width: 768px){
     .place{
         max-width: 100%;
-        column-gap: 28px;
-        grid-row-gap: 48px;
+        gap: 48px 28px;
         margin-bottom: 72px;
     }
 }
