--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -36,8 +36,7 @@
 
 @media screen and (max-width: 320px){
     .place__image{
-        max-width: 100%;
-        margin-bottom: 32px;
+        max-width: 320px;
     }
 }
 
