--- a/blocks/place/__paragraph-item/place__paragraph-item.css
+++ b/blocks/place/__paragraph-item/place__paragraph-item.css
@@ -32,8 +32,8 @@
 
 @media screen and (max-width: 320px){
     .place__paragraph-item{
-        max-width: 288px;
-        margin: 0 auto;
+        width: 288px;
+        margin: 0 auto 0 auto;
     }
 }
 
