--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,7 +1,7 @@
 .header__logo{
     width: 176px;
     height: 52px;
-    justify-content: start;
+/*    justify-content: start;*/
     display: block;
 }
 
