--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -6,10 +6,12 @@
 .header {
     padding-top: 28px;
     max-width: 1184px;
+    min-width: 288px;
+    width: calc(100% - (48px + 48px));
     display: flex;
-    position: relative;
-    margin: 0 48px 0 48px;
-    align-items: center;
+    flex-direction: row;
+/*    margin: 0 48px 0 48px;*/
+    margin: 0 auto 0 auto;
     justify-content: space-between;
 }
 
