--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,6 +1,7 @@
 .page{
     background: #2A2C2F;
     font-family: Inter, sans-serif;
+    color: #fff;
     margin: 0 auto 0 auto;
     min-width: 320px;
 }
