--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -10,7 +10,8 @@
     max-width: 984px;
     margin: 0 auto 80px auto;
     display: grid;
-    grid-template-columns: 460px 484px;
+/*    grid-template-columns: 460px 484px;*/
+    grid-template-columns: 0.95fr 1fr;
     grid-column-gap: 40px;
     grid-row-gap: 48px;
 }
@@ -24,7 +25,8 @@
         max-width: 928px;
         grid-column-gap: 32px;
         grid-row-gap: 48px;
-        grid-template-columns: 440px 456px;
+/*        grid-template-columns: 440px 456px;*/
+        grid-template-columns: 0.95fr 1fr;
     }
 }
 
@@ -35,8 +37,9 @@
         margin: 0px auto 60px auto;
         grid-column-gap: 20px;
         grid-row-gap: 40px;
-        grid-template-columns: 340px 340px;
-
+/*        grid-template-columns: 340px 340px;*/
+        grid-template-columns: 0.95fr 1fr;
+  
     }
 }
 
@@ -46,7 +49,7 @@
         margin-bottom: 72px;
         grid-column-gap: 28px;
         grid-row-gap: 48px;
-        grid-template-columns: 340px 340px;
+        grid-template-columns: 0.95fr 1fr;
     }
 }
 
