--- a/blocks/header/__lang-links/header__lang-links.css
+++ b/blocks/header/__lang-links/header__lang-links.css
@@ -1,6 +1,5 @@
-.header__links{
+.header__lang-links{
     padding: 0;
-    margin: auto 0 0 auto;
     width: fit-content;
     -ms-align-self: flex-end;
     align-self: flex-end;
