--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -13,6 +13,7 @@
 @media screen and (max-width: 1024px){
     .photo-grid{
         max-width: 928px;
+      max-width: calc(100%);
     }
 }
 
@@ -55,8 +56,7 @@
 @media screen and (max-width: 567px) and (min-width: 321px){
     .photo-grid{
         min-width: 100%;
-        margin-right: auto;
-        margin-left: auto;
+        margin: 0 auto 0 auto;
         justify-content: space-around;
     }
 }
@@ -64,8 +64,7 @@
 @media screen and (max-width: 320px){
     .photo-grid{
         max-width: 288px;
-        margin-right: auto;
-        margin-left: auto;
+        margin: 0 auto 0 auto;
     }
 }
 
