--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -8,33 +8,25 @@
   margin: 0 0 24px 0;
 }
 
+.place__paragraph:last-child {
+  margin-bottom: 0;
+}
+
 
 @media screen and (max-width: 768px) {
   .place__paragraph {
-    font-family: Inter;
-    font-style: normal;
-    font-weight: normal;
     font-size: 16px;
-    line-height: 163%;
   }
 }
 
 @media screen and (max-width: 579px) and (min-width: 321px) {
   .place__paragraph {
-    max-width: 100%;
+    font-size: 16px;
   }
-}
-
-.place__paragraph:last-child {
-  margin-bottom: 0;
 }
 
 @media screen and (max-width: 320px) {
   .place__paragraph {
-    font-family: Inter;
-    font-style: normal;
-    font-weight: normal;
     font-size: 16px;
-    line-height: 163%;
   }
 }
