--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -32,6 +32,7 @@
 @media screen and (max-width: 319px) {
   .intro__text {
     max-width: 100%;
+    text-align: center;
     margin: 0 auto 0 auto;
     font-size: 20px;
   }
