--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -6,6 +6,6 @@
 
 @media screen and (max-width: 1023px) and (min-width: 768px){
     .lead__image {
-        width: 100%;
+        min-width: 100%;
     }
 }
