--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -4,9 +4,11 @@
   margin: 16px 0 0 0;
   justify-content: space-around;
   align-content: space-around;
+  object-fit: cover;
+  object-position: center;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1024px) and (max-width: 1279px) {
   .photo-grid__item {
     max-width: 300px;
     height: 225px;
@@ -17,7 +19,7 @@
   .photo-grid__item {
     width: 285px;
     height: 285px;
-    justify-content: center;
+
   }
 }
 
@@ -25,7 +27,7 @@
   .photo-grid__item {
     width: 290px;
     height: 290px;
-    justify-content: center;
+
   }
 }
 
@@ -35,14 +37,14 @@
   .photo-grid__item {
     max-width: 352px;
     height: 264px;
-    justify-content: center;
+
   }
 }
 
 @media screen and (max-width: 768px) {
   .photo-grid__item {
     max-width: 352px;
-    justify-content: center;
+
   }
 }
 
@@ -82,7 +84,5 @@
   .photo-grid__item {
     width: 100%;
     margin: 0 auto 0 auto;
-    object-fit: cover;
-    object-position: center;
   }
 }
