--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,81 +1,73 @@
 @import url(./__item/photo-grid__item.css);
 
 .photo-grid {
-    max-width: 1184px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-content: space-between;
-    align-items: stretch;
-    margin: 92px auto 0;
+  max-width: 1184px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-content: space-between;
+  align-items: stretch;
+  margin: 92px auto 0 auto;
 }
 
-@media screen and (max-width: 1024px){
-    .photo-grid{
-        max-width: 928px;
-      max-width: calc(100%);
-    }
+@media screen and (max-width: 1024px) {
+  .photo-grid {
+    max-width: 928px;
+  }
 }
 
-@media (max-width: 1023px) and (min-width: 767px){
-    .photo-grid {
-        max-width: 720px;
-    }
+@media (max-width: 1023px) and (min-width: 767px) {
+  .photo-grid {
+    max-width: 720px;
+  }
 }
 
 @media screen and (max-width: 600px) {
-    .photo-grid {
-        max-width: 580px;
+  .photo-grid {
+    max-width: 580px;
 
-    }
+  }
 }
 
 @media screen and (max-width: 581px) {
-    .photo-grid {
-        max-width: 100%;
-        grid-column-gap: 3px;
-        grid-row-gap: 10px;
-        justify-content: space-around;
-    }
+  .photo-grid {
+    max-width: 100%;
+    grid-row-gap: 10px;
+    justify-content: space-around;
+  }
 }
 
 
 
-@media screen and (max-width: 768px){
-    .photo-grid{
-        max-width: 720px;
-    }
+@media screen and (max-width: 768px) {
+  .photo-grid {
+    max-width: 720px;
+    margin-top: 88px;
+  }
 }
 
-@media screen and (max-width: 580px) and (min-width: 568px){
-    .photo-grid {
-        min-width: 560px;
-    }
+@media screen and (max-width: 580px) and (min-width: 568px) {
+  .photo-grid {
+    min-width: 560px;
+  }
 }
 
-@media screen and (max-width: 567px) and (min-width: 321px){
-    .photo-grid{
-        min-width: 100%;
-        margin: 0 auto 0 auto;
-        justify-content: space-around;
-    }
+@media screen and (max-width: 567px) and (min-width: 321px) {
+  .photo-grid {
+    width: 100%;
+    justify-content: space-around;
+  }
 }
 
-@media screen and (max-width: 320px){
-    .photo-grid{
-        max-width: 288px;
-        margin: 0 auto 0 auto;
-    }
+@media screen and (max-width: 320px) {
+  .photo-grid {
+    max-width: 288px;
+    margin-top: 64px;
+  }
 }
 
-@media screen and (max-width: 319px){
-    .photo-grid{
-        max-width: 100%;
-        margin: 0 auto 0 auto;
-    }
+@media screen and (max-width: 319px) {
+  .photo-grid {
+    max-width: 100%;
+  }
 }
-
-
-
-
-
