--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -31,7 +31,7 @@
 @media screen and (max-width: 1023px) and (min-width: 769px) {
   .place {
     max-width: 700px;
-    margin: 0 auto 60px auto;
+    margin-bottom: 60px;
     grid-column-gap: 20px;
     grid-row-gap: 40px;
 
